--- a/styles.css
+++ b/styles.css
@@ -824,7 +824,7 @@ margin-bottom: 5%;
    color: #344464;
    font-family: "Roboto", sans-serif;
    font-size: small;
-   font-weight: 100;
+   font-weight: 300;
    justify-self: center;
    align-self: center;
    text-align: center;
@@ -1572,6 +1572,7 @@ gap: 5rem;
 }
 .teamSectionText{
 text-align: start;
+font-size: medium;
 }
 .teamSectionGrid{
 gap: 2rem 1rem;
@@ -2089,8 +2090,8 @@ z-index: 1;
     grid-column: 3/4;
   }
   .teamSectionText{
-    padding: 1rem 15rem;
-    font-size: larger;
+    padding: 1rem 5rem;
+    font-size: large;
   }
 
   .impactSection {
