--- a/styles.css
+++ b/styles.css
@@ -1694,14 +1694,17 @@ z-index: 1;
   .cardyear1{
     grid-column: 2/3;
     grid-row: 2/3;
+    margin-bottom: -2.5rem;
   }
   .cardyear2 {
     grid-column: 4/5;
     grid-row: 2/3;
+    margin-bottom: -2.5rem;
   }
   .cardyear3 {
     grid-row: 2/3;
     grid-column: 6/7;
+    margin-bottom: -2.5rem;
   }
   .card1 {
     grid-column: 2/3;
@@ -2183,5 +2186,8 @@ z-index: 1;
   }
   .card2{
     justify-self: center;
+  }
+  .cardyear1, .cardyear2, .cardyear3{
+    margin-bottom: -1rem;
   }
 }
