--- a/styles.css
+++ b/styles.css
@@ -1100,6 +1100,7 @@ right:0rem;
   font-size: large;
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
 }
 .donation-header {
   display: grid;
@@ -1663,7 +1664,7 @@ width: 50%;
     font-weight: bolder;
     font-size: 1.3rem;
     position: absolute;
-    width: 8rem;
+    width: 10rem;
   }
   .teamMem1Img2, .teamMem2Img2,.teamMem3Img2,.teamMem4Img2,.teamMem5Img2,.teamMem6Img2{
     display: block;
