--- a/styles.css
+++ b/styles.css
@@ -1179,7 +1179,7 @@ justify-content:center;
 }
 .labelclass {
   font-family: "Roboto", sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: white;
   margin-top: 10%;
 }
@@ -1196,7 +1196,7 @@ justify-content:center;
 
 .inputlocation {
   display: flex;
-  gap: 5%;
+  gap: 0%;
 }
 .city,
 .state,
@@ -1716,6 +1716,9 @@ z-index: 1;
   }
 .cardicon{
   top:0rem;
+}
+.labelclass{
+  font-size: 1rem;
 }
   .goBack {
   font-weight: 300;
