--- a/styles.css
+++ b/styles.css
@@ -1926,6 +1926,7 @@ z-index: 1;
     width:60rem; 
     gap:0;
     position:relative;
+    align-items: center;
   }
 .storieshead {
   position:absolute;
@@ -1933,14 +1934,14 @@ z-index: 1;
 }
 .storiesImg3 {
   display: block;
-  width: 60%;
+  width: 50%;
   align-self: center;
 }
 .storiesText {
   align-self: center;
   justify-self: end;
   margin-right:-3rem;
-  font-size:1.6rem;
+  font-size:1.8rem;
 }
 .storiesButton {
   position:absolute;
